_headerbar.css: fix disabled hb button in backdrop
Previous change made invisible - not transparent - the borders for
buttons in backdrop, but I missed to change the disabled button as well.
Fixing it here.

--- a/gtk/src/light/gtk-3.20/_headerbar.scss
+++ b/gtk/src/light/gtk-3.20/_headerbar.scss
@@ -130,8 +130,6 @@ headerbar,
                 &:disabled {
                     @include button(backdrop-insensitive, if($variant=='light', darken($headerbar_bg_color, 15%), $headerbar_bg_color), $backdrop_headerbar_fg_color);
 
-                    border-color: $headerbar_border_color;
-
                     &:active,
                     &:checked {
                         @include button(backdrop-insensitive-active, $backdrop_headerbar_bg_color, $backdrop_headerbar_fg_color);
